@@ -65,7 +65,7 @@ int CompareInternal(std::string const & filename, std::string const & output)
    std::cout << "3...";
    // For the next step:
    int    dataSizeWritten = reread->GetImageDataSize();
-   void* imageDataWritten = reread->GetImageData();
+   uint8_t* imageDataWritten = reread->GetImageData();
 
    //////////////// Step 4:
 
@@ -74,8 +74,6 @@ int CompareInternal(std::string const & filename, std::string const & output)
       std::cout << std::endl
          << "        Pixel areas lengths differ: "
          << dataSize << " # " << dataSizeWritten << std::endl;
-      delete[] (char*)imageData;
-      delete[] (char*)imageDataWritten;
       delete header;
       delete file;
       delete reread;
@@ -87,8 +85,6 @@ int CompareInternal(std::string const & filename, std::string const & output)
       (void)res;
       std::cout << std::endl
          << "        Pixel differ (as expanded in memory)." << std::endl;
-      delete[] (char*)imageData;
-      delete[] (char*)imageDataWritten;
       delete header;
       delete file;
       delete reread;
@@ -97,8 +93,6 @@ int CompareInternal(std::string const & filename, std::string const & output)
    std::cout << "4...OK." << std::endl ;
 
    //////////////// Clean up:
-   delete[] (char*)imageData;
-   delete[] (char*)imageDataWritten;
    delete header;
    delete file;
    delete reread;
